--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-<p><span id="seconds">0.0</span> seconds</p>
-<p><span id="miles">0.0</span> miles</p>
+<p><span id="seconds">0.0</span> <span id="secondsText">seconds</span></p>
+<p><span id="miles">0.0</span> <span id="milesText">miles</span></p>
 
 <script src="behavior.js" type="text/javascript"></script>
 </body>
